prevent overflow

--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,18 @@ button:focus {
   outline: none !important;
   box-shadow: none !important;
 }
+
+.tab-content {
+  max-height: 70vh;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+.tab-content::-webkit-scrollbar {
+  width: 3px;
+  background-color: rgba(0, 128, 0, 0.258);
+}
+
+.tab-content::-webkit-scrollbar-thumb {
+  background-color: #002aff33;
+}
